version/0.33/_sources/api/solver/_autosummary/settings/periodic_2.rst.txt
:orphan:

.. _periodic_2:

periodic
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.periodic_2
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_5>`                                         Crate new boundary.

:ref:`delete <delete>`                                      Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`periodic_2_child <periodic_2_child>`


.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`boundaries <boundaries>`       'boundaries' child.

==============================   =======================

